2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b111

 * Change: Wording and code style.

 * Fix: Correct translation domain.

2007-10-16 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b110

 * Change: Removed some white background in treefolder images.

 * Fix: fitToWindow was still not working 100%.

 * Fix: Little HTML fix.

2007-10-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b109

 * Fix: Subalbum-tree did not work when subalbum name started with a number.

 * Change: Jenskin and Blackskin nicifies.

2007-09-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b108

 * Fix: Download icon in thumbsview was missing.

 Thanks to John Schwaller.

2007-09-10 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b107

 * Fix: Url to photoaccess.

 Thanks to John Schwaller.

2007-09-10 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b106

 * Change: Black Skin changes.

2007-09-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b105

 * Fix: Removed unnice whitespace in image frames.

 * Fix: unnice wrap in "jumpTo"
 
 Thans to John Schwaller.

2007-09-05 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b104

 * Fix: fitToWindow was broken.

 Thanks to John Schwaller.

2007-08-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b103

 * Change: CSS consolidation for no-skin and jenskin.

2007-08-15 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b102

 * Fix: New function from b100 was broken.

2007-08-13 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b101

 * Fix: Better regexp for email check.

 Thanks to the G2 team.

2007-08-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b100

 * New: function getDefaultFilename() in lib/filesystem.php

 * Change: Local templates (without .default) can now be used.

 * Fix: Added 'up' breadcrumb in slideshow in case the returnToLink is off.

 ----- FEATURE FREEZE FOR GALLERY 1.6 ----

2007-08-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b99

 * Change: Renamed lib/Form.php to lib/form.php

2007-07-30 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b98

 * Fix: It was possible to bypass the voting permission.
