@@ -1,3 +1,9 @@
+2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b112
+
+ * Change: Better ID Naming for multiInput fields in gInput()
+
+ * Change: Set ID = Name if not given in gButton()
+
 2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b111
 
  * Change: Wording and code style.
